--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
     <title>My Beautiful Landing Page</title>
     <link rel="stylesheet" href="index.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    ></script>
     <script>
       $(document).ready(function () {
         $("#aboutLink").click(function () {
           $("#aboutContent").toggle();
+        });
+        $(".navbar-toggler").click(function () {
+          $(".navbar-collapse").toggleClass("show");
         });
       });
     </script>
@@ -32,7 +40,7 @@
           <div class="row">
             <div class="col-lg-12 mt-3 mb-3">
               <header>
-                <nav class="navbar navbar-expand-lg navbar-light">
+                <nav class="navbar navbar-expand-md navbar-light">
                   <a class="navbar-brand" href="#">
                     <img
                       class="logo rounded-circle"
@@ -40,41 +48,53 @@
                       alt="logo"
                     />
                   </a>
+                  <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarTogglerDemo03"
+                    aria-controls="navbarTogglerDemo03"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                  >
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
                   <div
-                    class="collapse navbar-collapse mx-auto"
+                    class="collapse navbar-collapse"
                     id="navbarTogglerDemo03"
                   >
-                    <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                      <li class="nav-item mx-3">
-                        <a
-                          class="nav-link"
-                          style="
-                            margin-left: 180px;
-                            color: orangered;
-                            font-weight: bold;
-                          "
-                          href="#Home"
-                          >Home</a
-                        >
-                      </li>
-                      <li class="nav-item mx-3">
-                        <a
-                          class="nav-link"
-                          href="#Rest"
-                          style="color: orangered; font-weight: bold"
-                          >Restaurants</a
-                        >
-                      </li>
-                      <li class="nav-item mx-3">
-                        <a
-                          class="nav-link"
-                          id="aboutLink"
-                          href="javascript:void(0)"
-                          style="color: orangered; font-weight: bold"
-                          >About Us</a
-                        >
-                      </li>
-                    </ul>
+                    <div class="navbar-nav mx-auto mt-2 mt-lg-0">
+                      <ul class="navbar-nav">
+                        <li class="nav-item mx-3">
+                          <a
+                            class="nav-link"
+                            style="
+                              color: orangered;
+                              font-weight: bold;
+                            "
+                            href="#Home"
+                            >Home</a
+                          >
+                        </li>
+                        <li class="nav-item mx-3">
+                          <a
+                            class="nav-link"
+                            href="#Rest"
+                            style="color: orangered; font-weight: bold"
+                            >Restaurants</a
+                          >
+                        </li>
+                        <li class="nav-item mx-3">
+                          <a
+                            class="nav-link"
+                            id="aboutLink"
+                            href="javascript:void(0)"
+                            style="color: orangered; font-weight: bold"
+                            >About Us</a
+                          >
+                        </li>
+                      </ul>
+                    </div>
                     <form class="form-inline ml-auto my-2 my-lg-0">
                       <button
                         class="btn mx-2 my-sm-0"
@@ -100,6 +120,7 @@
               </header>
             </div>
           </div>
+
           <div class="row mt-5">
             <div class="col-lg-6">
               <div class="container py-3">
@@ -198,10 +219,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h1
-              class="text-center"
-              style="color: orangered; font-weight: 700"
-            >
+            <h1 class="text-center" style="color: orangered; font-weight: 700">
               About Us
             </h1>
             <div style="font-size: larger">
